# apollo-voice-ai

./: .gitignore  Plan of action.txt  README.md  docker-compose.yml  render.yaml
.claude/: settings.local.json
admin-ui/: index.html
backend/: .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: d002124d136c_initial_schema.py
backend/app/: __init__.py  cache.py  config.py  database.py  logging_config.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: admin.py  appointments.py  availability.py  doctors.py  health.py  retell.py
backend/app/core/: errors.py  middleware.py  security.py
backend/app/models/: __init__.py  appointment.py  department.py  doctor.py  schedule.py  slot.py
backend/app/schemas/: appointment.py  availability.py  doctor.py
backend/app/seed/: data.py  seed.py
backend/app/services/: availability_service.py  booking_service.py  doctor_service.py  formatting.py  notifications.py
backend/scripts/: concurrency_check.py
backend/tests/: conftest.py  test_api.py  test_booking.py  test_doctor_resolution.py  test_notifications.py
docs/: architecture.md
eval/: run_eval.py  scenarios.json
eval/results/: latest.json
retell/: prompt.md  tools.json
