[project]
name = "apollo-voice-backend"
version = "1.0.0"
description = "Voice-agent appointment backend for Apollo Spectra Hospitals, Pune."
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 90
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
